# PrivScan

./: .gitignore  README.md  pyproject.toml  report.json
examples/sample_repo/: README.md  app.py  config.env
privscan/: __main__.py
privscan.egg-info/: PKG-INFO
privscan/cli/: main.py
privscan/detectors/: __init__.py  secrets.py
privscan/engine/: engine.py  location.py
privscan/reporter/: __init__.py  json_reporter.py  summary.py  table.py
privscan/rules/: __init__.py  loader.py  models.py  secrets.yml
privscan/scanner/: __init__.py  filesystem.py  reader.py
tests/cli/: test_cli.py
tests/detectors/: test_secrets.py
tests/engine/: test_engine.py  test_location.py  test_severity_filter.py
tests/reporter/: test_json_reporter.py  test_summary.py
tests/rules/: test_loader.py
tests/scanner/: test_filesystem.py  test_reader.py
