[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "privscan"
version = "0.1.0"
description = "Local-first deterministic privacy & security scanning CLI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Nihal" }
]

dependencies = [
  "pyyaml>=6.0",
  "rich>=13.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]

[project.scripts]
privscan = "privscan.cli.main:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["privscan*"]
exclude = ["examples*"]

